<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dawson.mountgoodcontrol.MusicActivity">

    <LinearLayout
        android:id="@+id/buttonSwitches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_padding_switches"
        >

        <Button
            android:id="@+id/buttonSwitchLights"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/switchLights"
            android:onClick="startLights"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/buttonSwitchMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/switchMusic"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/buttonSwitchMovies"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/switchMovies"
            android:onClick="startMovies"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/buttonSwitchSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/switchSettings"
            android:onClick="startSettings"
            tools:ignore="ButtonStyle"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSwitches"
        android:gravity="center"
        android:lines="1"
        android:text="@string/textNoSong"
        />

    <TextView
        android:id="@+id/songArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/songName"
        android:gravity="center"
        android:lines="1"
        android:text="@string/textIsPlaying"
        />

    <TextView
        android:id="@+id/songVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/songArtist"
        android:gravity="center"
        android:lines="1"
        android:text="@string/textVolume"
        />

    <LinearLayout
        android:id="@+id/musicControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/songVolume"
        >

        <Button
            android:id="@+id/buttonPrevSong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimary"
            android:text="@string/buttonPrevSong"
            android:onClick="sendData"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/buttonPlayPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/colorPrimary"
            android:text="@string/buttonPlayMusic"
            android:onClick="sendData"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/buttonNextSong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimary"
            android:text="@string/buttonNextSong"
            android:onClick="sendData"
            tools:ignore="ButtonStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/musicVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/musicControl"
        >

        <Button
            android:id="@+id/buttonVolDown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/buttonVolDown"
            android:onClick="sendData"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/buttonVolUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/buttonVolUp"
            android:onClick="sendData"
            tools:ignore="ButtonStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/musicStartStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/musicVolume"
        android:layout_marginBottom="@dimen/bottom_padding_group"
        >

        <Button
            android:id="@+id/buttonStartMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/buttonStartMusic"
            android:onClick="sendData"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/buttonStopMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/buttonStopMusic"
            android:onClick="sendData"
            tools:ignore="ButtonStyle"
            />

    </LinearLayout>

</RelativeLayout>
