<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movies"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dawson.mountgoodcontrol.MoviesActivity">

    <LinearLayout
        android:id="@+id/buttonSwitches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_padding_switches"
        >

        <Button
            android:textColor="@color/colorPrimary"
            android:id="@+id/buttonSwitchLights"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/switchLights"
            android:onClick="startLights"
            />

        <Button
            android:textColor="@color/colorPrimary"
            android:id="@+id/buttonSwitchMusic"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/switchMusic"
            android:onClick="startMusic"
            />

        <Button
            android:textColor="@color/colorPrimary"
            android:id="@+id/buttonSwitchMovies"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/switchMovies"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSwitches"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/moviesRowOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/moviesRowTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/moviesRowOne"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/moviesRowTwo"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="225dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Batman Begins"
                    android:drawableTop="@drawable/batman_begins"
                    />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
